cmake_minimum_required(VERSION 3.13)
project(acm)

set(CMAKE_CXX_STANDARD 11)

add_executable(acm "How Many Answers Are Wrong.cpp")
add_executable(hdu3080 "HDU-3038.cpp")
add_executable(zoj3261 "ZOJ-3261.cpp")
add_executable(zoj3261new "ZOJ-3261_new.cpp")
add_executable(Supermarket "Supermarket.cpp")
add_executable(Supermerket_withSet "Supermarket_WithSet.cpp")
add_executable(Rochambeau "Rochambeau.cpp")
add_executable(Rochambeau_new "Rochambeau_new.cpp")
add_executable(KMP "KMP.cpp")
add_executable(Navigation_Nightmare "Navigation Nightmare.cpp")
add_executable(Navigation_Nightmare_new "Navigation Nightmare_new.cpp")