cmake_minimum_required(VERSION 3.13)
project(acm)

set(CMAKE_CXX_STANDARD 11)

add_executable(acm "How Many Answers Are Wrong.cpp")
add_executable(hdu3080 "HDU-3038.cpp")
add_executable(zoj3261 "ZOJ-3261.cpp")
add_executable(zoj3261new "ZOJ-3261_new.cpp")
add_executable(Supermarket "Supermarket.cpp")
add_executable(Supermerket_withSet "Supermarket_WithSet.cpp")
add_executable(Rochambeau "Rochambeau.cpp")
add_executable(Rochambeau_new "Rochambeau_new.cpp")
add_executable(KMP "KMP.cpp")
add_executable(Navigation_Nightmare "Navigation Nightmare.cpp")
add_executable(Navigation_Nightmare_new "Navigation Nightmare_new.cpp")
add_executable(CodeForces_1138D "CodeForces - 1138D.cpp")
add_executable(ShuTa "ShuTa.cpp")
add_executable(SuperLouTi "SuperLouTi.cpp")
add_executable(Bee "Bee.cpp")
add_executable(CowStory "CowStory.cpp")
add_executable(Bone_Collector "Bone Collector.cpp")
add_executable(Len "len.cpp")
add_executable(FATE "FATE")
add_executable(Robberies "Robberies.cpp")
add_executable(Robb "Robberies_new.cpp")
add_executable(SuperJump "SuperJump.cpp")
add_executable(SuperJump_new "SuperJump_new.cpp")
add_executable(LS "UpOrderSubsequent.cpp")
add_executable(FP "FreePizza.cpp")